--- a/src/sass/hero.scss
+++ b/src/sass/hero.scss
@@ -10,6 +10,7 @@
     &-footer {
         @include Roboto;
         position: absolute;
+        left: 5%;
         bottom: 55px;
         width: 90%;
         display: flex;
