--- a/src/sass/popup.scss
+++ b/src/sass/popup.scss
@@ -16,7 +16,8 @@
     height: 100vh;
     background: rgba(77, 74, 98, 0.7);
     backdrop-filter: blur(5px);
-    display: none;
+    transition: 0.3s;
+    transform: translateX(100%);
     &-content {
         top: 50%;
         transform: translateY(-50%);
