--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,11 +25,18 @@
   }
 }
 
-.line {
-  z-index: 0;
+.particle-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 .line-wrap {
+  background: url("../img/hero/hero-bg.png") no-repeat center;
+  background-size: cover;
   position: relative;
   width: 100%;
 }
@@ -121,7 +128,6 @@
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(5px);
   display: none;
-  z-index: 100;
 }
 
 .dot-description__left {
@@ -150,6 +156,13 @@
   left: 42.5%;
   top: 67%;
   position: absolute;
+}
+
+.dot-one,
+.dot-two,
+.dot-three,
+.dot-four {
+  z-index: 10;
 }
 
 .dot-one:hover .dot-description__bank,
@@ -267,21 +280,23 @@ a {
   }
 }
 
+footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
 .hero {
   height: 100vh;
   position: relative;
   width: 100%;
   overflow: hidden;
-  background: url("../img/hero/hero-bg.png") no-repeat center;
-  background-size: cover;
 }
 
 .hero-footer {
   font-family: 'Roboto', sans-serif;
-  position: absolute;
-  left: 5%;
-  bottom: 55px;
-  width: 90%;
+  padding-bottom: 55px;
   display: flex;
   flex-wrap: wrap;
   font-size: 12px;
@@ -316,6 +331,7 @@ a {
 
 .callback {
   position: absolute;
+  z-index: 10;
   cursor: pointer;
   left: 0;
   bottom: 30%;
@@ -336,6 +352,7 @@ a {
 }
 
 .page-title {
+  z-index: 10;
   margin-bottom: 84px;
   padding-top: 28px;
 }
@@ -351,14 +368,14 @@ a {
   font-size: 48px;
 }
 
-.page-title-subtitle {
+.page-title__subtitle {
   margin-left: 26px;
   font-size: 12px;
   font-weight: 300;
   font-style: normal;
 }
 
-.page-title-subtitle:before {
+.page-title__subtitle:before {
   content: '';
   display: inline-block;
   height: 20px;
