--- a/src/sass/background.scss
+++ b/src/sass/background.scss
@@ -1,8 +1,17 @@
 @import 'mixin';
+.particle-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 
+}
 .line {
-    z-index: 0;
     &-wrap {
+        background:  url('../img/hero/hero-bg.png') no-repeat center;
+        background-size: cover;
         position: relative;
         width: 100%;
     }
@@ -84,7 +93,6 @@
             background: rgba(255, 255, 255, 0.2);
             backdrop-filter: blur(5px);
             display: none;
-            z-index: 100;
         }
         &__left {
             margin-left: -200px;
@@ -112,6 +120,7 @@
         position: absolute;
     }
     &-one, &-two, &-three, &-four {
+        z-index: 10;
         &:hover {
             .dot-description {
                 &__bank, &__delete, &__buy, &__debt {
