--- a/src/sass/popup-callback.scss
+++ b/src/sass/popup-callback.scss
@@ -8,6 +8,7 @@
         backdrop-filter: blur(5px);
     }
 }
+
 .popup-callback {  
     position: absolute;
     top: 0;
@@ -18,6 +19,10 @@
     backdrop-filter: blur(5px);
     transition: 0.3s;
     transform: translateX(100%);
+    z-index: 99;
+    &__button {
+        width: 422px;
+    }
     &-content {
         top: 50%;
         transform: translateY(-50%);
@@ -39,12 +44,6 @@
     }
     &-input {
         width: 422px;
-        height: 60px;
-        padding-left: 18px;
-        background: rgba(255, 255, 255, 0.25);
-        color: rgba(247, 247, 247, 0.603);
-        border: none;
-        margin-bottom: 30px;
     }
     &-subtitle {
         margin-top: 10px;
