--- a/src/sass/service-modal.scss
+++ b/src/sass/service-modal.scss
@@ -1,19 +1,20 @@
 @import 'mixin';
-.modal {
+.service-modal {
     position: absolute;
     width: 79.5%;
     top: 0;
     right: 0;
-    padding: 5vh 3vw 10vh 10vw;
     height: 100vh;
     background: rgba(77, 74, 98, 0.7);
     backdrop-filter: blur(5px);
     margin-left: 400px;
     transition: 0.5s;
-    transform: translateX(100%);
+    transform: translateX(0%);
     z-index: 99;
     &-wrap {
         position: relative;
+        padding: 5vh 3vw 10vh 10vw;
+        height: 60vh;
         display: flex;
         flex-direction: column;
        
@@ -22,11 +23,13 @@
         height: 20vh;
     }
     &-main {
-        height: 50vh;
+        height: 40vh;
     }
     &-footer {
         position: relative;
-        height: 10vh;
+        height: 40vh;
+        background: rgba(77, 74, 98, 0.7);
+        backdrop-filter: blur(5px);
         &__block {
             position: absolute;    
             top: 50%;
