--- a/src/css/main.css
+++ b/src/css/main.css
@@ -78,7 +78,11 @@
   cursor: pointer;
 }
 
-.dot:hover {
+.dot-wrap__index {
+  z-index: 999;
+}
+
+.dot-wrap:hover .dot {
   box-shadow: 0px 0px 25px rgba(255, 255, 255, 0.99);
 }
 
@@ -128,7 +132,6 @@
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(5px);
   display: none;
-  z-index: 100;
 }
 
 .dot-description__left {
@@ -159,13 +162,6 @@
   position: absolute;
 }
 
-.dot-one,
-.dot-two,
-.dot-three,
-.dot-four {
-  z-index: 10;
-}
-
 .dot-one:hover .dot-description__bank,
 .dot-one:hover .dot-description__delete,
 .dot-one:hover .dot-description__buy,
@@ -194,100 +190,7 @@
     transform: scale(1.15);
   }
 }
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1s;
-}
 
-@-webkit-keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.form-button {
-  font-family: 'Merriweather', serif;
-  font-weight: bold;
-  border: none;
-  cursor: pointer;
-  height: 60px;
-  font-size: 18px;
-  color: #252247;
-  background: linear-gradient(257.79deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), rgba(255, 255, 255, 0.25);
-}
-
-.form-input {
-  height: 60px;
-  padding-left: 18px;
-  background: rgba(255, 255, 255, 0.25);
-  color: rgba(247, 247, 247, 0.603);
-  border: none;
-  margin-bottom: 30px;
-}
-.fade {
-  animation-name: fade;
-  animation-duration: 1s;
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1s;
-}
-
-@-webkit-keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fade {
-  from {
-    opacity: .1;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  color: #ffffff;
-}
-
-.container {
-  max-width: 90%;
-  margin: auto;
-}
-
-body {
-  background: linear-gradient(308.68deg, rgba(78, 77, 94, 0.24) 2.58%, #0F0C27 55.17%), radial-gradient(849.03px at -2.08% 64.75%, rgba(37, 34, 71, 0.7) 0%, #080521 100%);
-  height: 100vh;
-  font-family: 'Merriweather', serif;
-}
-
-a {
-  text-decoration: none;
-}
 .fade {
   animation-name: fade;
   animation-duration: 1s;
@@ -428,11 +331,35 @@ footer {
 
 .contacts-item__info {
   margin-left: 18px;
+  font-family: 'Merriweather', serif;
 }
 
 .contacts-item__message {
   margin-left: 4px;
 }
+
+.contacts-item__image {
+  width: 24px;
+  height: 23px;
+  margin-top: 3px;
+}
+
+.contacts-map {
+  margin-top: 40px;
+  width: 100%;
+  height: 300px;
+  background: red;
+}
+
+.links-slider {
+  margin-top: 50px;
+}
+
+.links-slide {
+  padding-bottom: 10px;
+  cursor: pointer;
+}
+
 .fade {
   animation-name: fade;
   animation-duration: 1s;
@@ -459,6 +386,76 @@ footer {
     opacity: 1;
   }
 }
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: #ffffff;
+}
+
+.container {
+  max-width: 90%;
+  margin: auto;
+}
+
+body {
+  background: linear-gradient(308.68deg, rgba(78, 77, 94, 0.24) 2.58%, #0F0C27 55.17%), radial-gradient(849.03px at -2.08% 64.75%, rgba(37, 34, 71, 0.7) 0%, #080521 100%);
+  height: 100vh;
+  font-family: 'Merriweather', serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1s;
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .1;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: .1;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.form-button {
+  font-family: 'Merriweather', serif;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  height: 60px;
+  font-size: 18px;
+  color: #252247;
+  background: linear-gradient(257.79deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), rgba(255, 255, 255, 0.25);
+}
+
+.form-input {
+  height: 60px;
+  padding-left: 18px;
+  background: rgba(255, 255, 255, 0.25);
+  color: rgba(247, 247, 247, 0.603);
+  border: none;
+  margin-bottom: 30px;
+}
+
 .fade {
   animation-name: fade;
   animation-duration: 1s;
@@ -501,6 +498,17 @@ footer {
   z-index: 99;
 }
 
+.modal-blur {
+  position: absolute;
+  width: 79.5%;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  z-index: -1;
+  background: rgba(77, 74, 98, 0.7);
+  filter: blur(5px);
+}
+
 .modal-wrap {
   position: relative;
   display: flex;
@@ -509,6 +517,7 @@ footer {
 
 .modal-header {
   height: 20vh;
+  width: 85%;
 }
 
 .modal-main {
@@ -555,15 +564,226 @@ footer {
 .modal-title {
   font-weight: 900;
   font-size: 48px;
-  width: 868px;
-  margin-bottom: 50px;
 }
 
 .modal-text {
   height: 100%;
   overflow: auto;
   max-height: 800px;
+  line-height: 34px;
   font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  padding-right: 100px;
+}
+
+.modal-active {
+  transform: translateX(0%);
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 3px;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+::-webkit-scrollbar-track-piece {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+::-webkit-scrollbar-thumb {
+  height: 50px;
+  background-color: #FFFFFF;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: #999;
+  border-radius: 50px;
+}
+
+::-webkit-resizer {
+  background-color: #666;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1s;
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .1;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: .1;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.service-modal {
+  position: absolute;
+  width: 79.5%;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  background: rgba(77, 74, 98, 0.7);
+  backdrop-filter: blur(5px);
+  margin-left: 400px;
+  transition: 0.5s;
+  transform: translateX(100%);
+  z-index: 99;
+}
+
+.service-modal-active {
+  transform: translateX(0%);
+}
+
+.service-modal-wrap {
+  position: relative;
+  padding: 5vh 3vw 10vh 10vw;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.service-modal-header {
+  position: relative;
+  height: 20vh;
+}
+
+.service-modal-main {
+  height: 40vh;
+}
+
+.service-modal-footer {
+  position: relative;
+  height: 40vh;
+  padding: 5vh 3vw 0vh 10vw;
+  background: rgba(77, 74, 98, 0.7);
+  backdrop-filter: blur(5px);
+}
+
+.service-modal-footer__attach {
+  width: 14px;
+  height: 15px;
+  margin-top: 2px;
+  margin-right: 10px;
+}
+
+.service-modal-footer__add-file {
+  flex-basis: 100%;
+  display: none;
+}
+
+.service-modal-footer__add-file label {
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  color: #BDBDBD;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.service-modal-footer__add-file label:hover {
+  color: white;
+}
+
+.service-modal-footer__add-file input {
+  display: none;
+}
+
+.service-modal-footer__answer {
+  display: none;
+}
+
+.service-modal-footer__subtitle {
+  font-size: 20px;
+}
+
+.service-modal-footer__title {
+  font-size: 36px;
+  padding-bottom: 42px;
+}
+
+.service-modal-footer__form {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.service-modal-footer__input {
+  flex-basis: 23%;
+  font-size: 16px;
+}
+
+.service-modal-footer__button {
+  flex-basis: 23%;
+}
+
+.service-modal-footer__block {
+  position: absolute;
+  bottom: 15%;
+  left: 5%;
+}
+
+.service-modal-footer__arrow {
+  display: inline-block;
+}
+
+.service-modal-footer__text {
+  margin-left: 15px;
+  font-size: 16px;
+  display: inline-block;
+}
+
+.service-modal-arrow {
+  position: absolute;
+  cursor: pointer;
+  top: 20%;
+  left: -7%;
+  transition: 0.3s;
+}
+
+.service-modal-arrow__close {
+  cursor: pointer;
+}
+
+.service-modal-arrow:hover {
+  transform: scale(1.1);
+}
+
+.service-modal-title {
+  font-weight: 900;
+  font-size: 48px;
+  width: 868px;
+  margin-bottom: 50px;
+}
+
+.service-modal-text {
+  height: 100%;
+  overflow: auto;
+  max-height: 800px;
+  font-size: 20px;
+  line-height: 34px;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   padding-right: 100px;
@@ -600,6 +820,7 @@ footer {
 ::-webkit-resizer {
   background-color: #666;
 }
+
 .fade {
   animation-name: fade;
   animation-duration: 1s;
@@ -679,6 +900,7 @@ footer {
 
 .popup-callback-input {
   width: 422px;
+  font-size: 16px;
 }
 
 .popup-callback-subtitle {
@@ -705,6 +927,7 @@ input::-moz-placeholder {
 input::-webkit-input-placeholder {
   color: rgba(247, 247, 247, 0.603);
 }
+
 .fade {
   animation-name: fade;
   animation-duration: 1s;
@@ -732,60 +955,69 @@ input::-webkit-input-placeholder {
   }
 }
 
-.service-modal {
+.modal {
   position: absolute;
   width: 79.5%;
   top: 0;
   right: 0;
+  padding: 5vh 3vw 10vh 10vw;
   height: 100vh;
   background: rgba(77, 74, 98, 0.7);
   backdrop-filter: blur(5px);
   margin-left: 400px;
   transition: 0.5s;
-  transform: translateX(0%);
+  transform: translateX(100%);
   z-index: 99;
 }
 
-.service-modal-wrap {
+.modal-blur {
+  position: absolute;
+  width: 79.5%;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  z-index: -1;
+  background: rgba(77, 74, 98, 0.7);
+  filter: blur(5px);
+}
+
+.modal-wrap {
   position: relative;
-  padding: 5vh 3vw 10vh 10vw;
-  height: 60vh;
   display: flex;
   flex-direction: column;
 }
 
-.service-modal-header {
+.modal-header {
   height: 20vh;
+  width: 85%;
 }
 
-.service-modal-main {
-  height: 40vh;
+.modal-main {
+  height: 50vh;
 }
 
-.service-modal-footer {
+.modal-footer {
   position: relative;
-  height: 40vh;
-  background: rgba(77, 74, 98, 0.7);
-  backdrop-filter: blur(5px);
+  height: 10vh;
 }
 
-.service-modal-footer__block {
+.modal-footer__block {
   position: absolute;
   top: 50%;
   left: -10%;
 }
 
-.service-modal-footer__arrow {
+.modal-footer__arrow {
   display: inline-block;
 }
 
-.service-modal-footer__text {
+.modal-footer__text {
   margin-left: 15px;
   font-size: 16px;
   display: inline-block;
 }
 
-.service-modal-arrow {
+.modal-arrow {
   position: absolute;
   cursor: pointer;
   top: 4%;
@@ -793,29 +1025,32 @@ input::-webkit-input-placeholder {
   transition: 0.3s;
 }
 
-.service-modal-arrow__close {
+.modal-arrow__close {
   cursor: pointer;
 }
 
-.service-modal-arrow:hover {
+.modal-arrow:hover {
   transform: scale(1.1);
 }
 
-.service-modal-title {
+.modal-title {
   font-weight: 900;
   font-size: 48px;
-  width: 868px;
-  margin-bottom: 50px;
 }
 
-.service-modal-text {
+.modal-text {
   height: 100%;
   overflow: auto;
   max-height: 800px;
+  line-height: 34px;
   font-size: 20px;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   padding-right: 100px;
+}
+
+.modal-active {
+  transform: translateX(0%);
 }
 
 ::-webkit-scrollbar {
