--- a/src/sass/desktop/_background.scss
+++ b/src/sass/desktop/_background.scss
@@ -49,11 +49,16 @@
     &-wrap {
         display: flex;
         cursor: pointer;
+        &__index {
+            z-index: 999;
+        }
+        &:hover {
+            .dot {
+            box-shadow: 0px 0px 25px rgba(255, 255, 255, 0.99);
+            }
+        }
     }
-    &:hover {
-        box-shadow: 0px 0px 25px rgba(255, 255, 255, 0.99);
-        
-    }
+    
     &:before {
         content: '';
         position: absolute;
@@ -93,7 +98,6 @@
             background: rgba(255, 255, 255, 0.2);
             backdrop-filter: blur(5px);
             display: none;
-            z-index: 100;
 
         }
         &__left {
@@ -122,7 +126,6 @@
         position: absolute;
     }
     &-one, &-two, &-three, &-four {
-        z-index: 10;
         &:hover {
             .dot-description {
                 &__bank, &__delete, &__buy, &__debt {
