--- a/src/sass/desktop/_modal.scss
+++ b/src/sass/desktop/_modal.scss
@@ -1,35 +1,44 @@
 @import 'mixin';
-.service-modal {
+.modal {
     position: absolute;
     width: 79.5%;
     top: 0;
     right: 0;
+    padding: 5vh 3vw 10vh 10vw;
     height: 100vh;
     background: rgba(77, 74, 98, 0.7);
     backdrop-filter: blur(5px);
     margin-left: 400px;
     transition: 0.5s;
-    transform: translateX(0%);
+    transform: translateX(100%);
     z-index: 99;
+    
+    &-blur {
+        position: absolute;
+        width: 79.5%;
+        top: 0;
+        right: 0;
+        height: 100vh;
+        z-index: -1;
+        background: rgba(77, 74, 98, 0.7);
+        filter: blur(5px);
+    }
     &-wrap {
         position: relative;
-        padding: 5vh 3vw 10vh 10vw;
-        height: 60vh;
         display: flex;
         flex-direction: column;
        
     }
     &-header {
         height: 20vh;
+        width: 85%;
     }
     &-main {
-        height: 40vh;
+        height: 50vh;
     }
     &-footer {
         position: relative;
-        height: 40vh;
-        background: rgba(77, 74, 98, 0.7);
-        backdrop-filter: blur(5px);
+        height: 10vh;
         &__block {
             position: absolute;    
             top: 50%;
@@ -60,18 +69,20 @@
     &-title {
         font-weight: 900;
         font-size: 48px;
-        width:868px;
-        margin-bottom: 50px;
     }
     &-text {
         height: 100%;
         overflow: auto;
         max-height: 800px;
+        line-height: 34px;
         font-size: 20px;
         @include Roboto;
         font-weight: 300;
         padding-right: 100px;
     }
+}
+.modal-active {
+    transform: translateX(0%);
 }
 ::-webkit-scrollbar { width: 5px; height: 3px; }
 ::-webkit-scrollbar-button { display: none }
