--- a/src/sass/desktop/_service-modal.scss
+++ b/src/sass/desktop/_service-modal.scss
@@ -1,10 +1,9 @@
 @import 'mixin';
-.modal {
+.service-modal {
     position: absolute;
     width: 79.5%;
     top: 0;
     right: 0;
-    padding: 5vh 3vw 10vh 10vw;
     height: 100vh;
     background: rgba(77, 74, 98, 0.7);
     backdrop-filter: blur(5px);
@@ -12,25 +11,80 @@
     transition: 0.5s;
     transform: translateX(100%);
     z-index: 99;
+    &-active {
+        transform: translateX(0%);
+    }
     &-wrap {
         position: relative;
+        padding: 5vh 3vw 10vh 10vw;
+        height: 60vh;
         display: flex;
         flex-direction: column;
        
     }
     &-header {
+        position: relative;
         height: 20vh;
     }
     &-main {
-        height: 50vh;
+        height: 40vh;
     }
     &-footer {
         position: relative;
-        height: 10vh;
+        height: 40vh;
+        padding: 5vh 3vw 0vh 10vw;
+        background: rgba(77, 74, 98, 0.7);
+        backdrop-filter: blur(5px);
+        &__attach {
+            width: 14px;
+            height: 15px;
+            margin-top: 2px;
+            margin-right: 10px;
+        }
+        &__add-file {
+            flex-basis: 100%;
+            display: none;
+            label {
+                @include Roboto;
+                font-size: 18px;
+                color: #BDBDBD;
+                cursor: pointer;
+                transition: 0.3s;
+                &:hover {
+                    color: white;
+                }
+            }
+            input {
+                display: none;
+            }
+        }
+        &__answer {
+            display: none;
+        }
+        &__subtitle {
+            font-size: 20px;
+        }
+        &__title {
+            font-size: 36px;
+            padding-bottom: 42px;
+        }
+        &__form {
+         display: flex;
+         justify-content: space-between; 
+         flex-wrap: wrap;  
+        }
+        &__input {
+            flex-basis: 23%;
+            font-size: 16px;
+
+        }
+        &__button {
+            flex-basis: 23%;
+        }
         &__block {
             position: absolute;    
-            top: 50%;
-            left: -10%;
+            bottom: 15%;
+            left: 5%;
         }
         &__arrow {
             display: inline-block;
@@ -44,8 +98,8 @@
     &-arrow {
         position: absolute;
         cursor: pointer;
-        top: 4%;
-        left: -10%;
+        top: 20%;
+        left: -7%;
         transition: 0.3s;
         &__close {
             cursor: pointer;
@@ -64,12 +118,15 @@
         height: 100%;
         overflow: auto;
         max-height: 800px;
-        font-size: 20px;
+        font-size: 20px;        
+        line-height: 34px;
         @include Roboto;
         font-weight: 300;
         padding-right: 100px;
     }
 }
+
+
 ::-webkit-scrollbar { width: 5px; height: 3px; }
 ::-webkit-scrollbar-button { display: none }
 ::-webkit-scrollbar-track {  background-color: rgba(255, 255, 255, 0.1);;}
